--- a/index.html
+++ b/index.html
@@ -1,130 +1,109 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rumah Tahfidz Saijaan</title>
-    <style>
-        :root {
-            --maroon: #800000;
-            --dark-maroon: #A52A2A;
-            --off-white: #F5F5F5;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        header {
-            background-color: var(--maroon);
-            color: white;
-            text-align: center;
-            padding: 1rem;
-        }
-
-        main {
-            flex: 1;
-            padding: 2rem;
-            background-color: var(--off-white);
-        }
-
-        .content {
-            background-color: white;
-            padding: 2rem;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        /* Rata tengah untuk h2 */
-        .content h2 {
-            text-align: center;
-        }
-
-        /* PDF container responsif dengan ukuran A4 */
-        .pdf-container {
-            width: 100%;
-            max-width: 100%;
-            aspect-ratio: 210 / 297; /* Rasio aspek A4 */
-            overflow: hidden;
-            margin: 0 auto; /* Rata tengah */
-            background-color: #f9f9f9; /* Warna latar belakang */
-            position: relative;
-        }
-
-        .pdf-container iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-
-        .btn {
-            display: inline-block;
-            background-color: var(--maroon);
-            color: white;
-            padding: 0.5rem 1rem;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 1rem;
-            transition: background-color 0.3s;
-            text-align: center;
-        }
-
-        .btn:hover {
-            background-color: var(--dark-maroon);
-        }
-
-        footer {
-            background-color: var(--maroon);
-            color: white;
-            text-align: center;
-            padding: 1rem;
-            margin-top: 2rem;
-        }
-
-        @media (max-width: 768px) {
-            main {
-                padding: 1rem;
-            }
-
-            .content {
-                padding: 1rem;
-            }
-
-            .pdf-container {
-                width: 100%;
-                aspect-ratio: 210 / 297; /* Menjaga rasio aspek A4 */
-            }
-        }
-    </style>
+<html><head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Pembimbing Baru Santri Rumah Tahfidz Saijaan</title>
+<style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  header, footer {
+    background-color: #800000;
+    color: white;
+    text-align: center;
+    padding: 1rem;
+  }
+  main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+  }
+  h1 {
+    margin-bottom: 2rem;
+  }
+  #distribution-container {
+    width: 100%;
+    height: 70vh;
+    border: none;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  #zoom-controls {
+    margin-top: 1rem;
+    display: flex;
+    gap: 1rem;
+  }
+  button {
+    background-color: #800000;
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  button:hover {
+    background-color: #600000;
+  }
+  @media (max-width: 768px) {
+    h1 {
+      font-size: 1.5rem;
+    }
+  }
+</style>
 </head>
 <body>
-    <header>
-        <h1>Rumah Tahfidz Saijaan</h1>
-    </header>
+  <header>
+    <h1>Pembimbing Baru Santri Rumah Tahfidz Saijaan</h1>
+  </header>
 
-    <main>
-        <div class="content">
-            <h2>DAFTAR PEMBIMBING BARU SANTRI</h2>
-            <div class="pdf-container">
-                <iframe src="distribusi.html" title="Distribusi Santri" loading="lazy"></iframe>
-            </div>
-            <a href="https://juniwardani.github.io/kelasbaru/" class="btn">DAFTAR KELAS BARU</a>
-        </div>
-    </main>
+  <main>
+    <iframe id="distribution-container" src="distribusi.html"></iframe>
+    <div id="zoom-controls">
+      <button id="zoom-in">Zoom In</button>
+      <button id="zoom-out">Zoom Out</button>
+    </div>
+  </main>
 
-    <footer>
-        <p>&copy; 2024 Rumah Tahfidz Saijaan. All rights reserved.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2023 Rumah Tahfidz Saijaan. All rights reserved.</p>
+  </footer>
+
+  <script>
+    const iframe = document.getElementById('distribution-container');
+    const zoomInBtn = document.getElementById('zoom-in');
+    const zoomOutBtn = document.getElementById('zoom-out');
+    let scale = 1;
+
+    function setZoom(newScale) {
+      scale = newScale;
+      iframe.style.transform = `scale(${scale})`;
+    }
+
+    zoomInBtn.addEventListener('click', () => {
+      setZoom(scale + 0.1);
+    });
+
+    zoomOutBtn.addEventListener('click', () => {
+      setZoom(Math.max(0.5, scale - 0.1));
+    });
+
+    // Handle zooming with mouse wheel
+    iframe.addEventListener('wheel', (e) => {
+      e.preventDefault();
+      const delta = e.deltaY > 0 ? -0.1 : 0.1;
+      setZoom(Math.max(0.5, Math.min(2, scale + delta)));
+    });
+
+    // Ensure the iframe content is loaded before applying zoom
+    iframe.onload = () => {
+      iframe.style.transformOrigin = 'center center';
+    };
+  </script>
 </body>
 </html>
