--- a/index.html
+++ b/index.html
@@ -53,5 +53,7 @@
             <!-- Baris siswa akan dimuat dari JavaScript -->
         </tbody>
     </table>
+
+    <script src="script.js"></script>
 </body>
 </html>
